--- a/frontend_app/tsconfig.app.json
+++ b/frontend_app/tsconfig.app.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "types": ["./src/shims-vue.d.ts"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
